# ProjectHub

./: run_all_tests.ps1
backend/: .python-version  Dockerfile  pyproject.toml  requirements.txt  run_tests.ps1
