[project]
name = "projecthub-backend"
version = "0.1.0"
description = "ProjectHub backend API"
requires-python = ">=3.11"
dependencies = [
    "Flask==1.1.4",
    "Flask-SQLAlchemy==2.3.2",
    "SQLAlchemy==1.4.0",
    "Flask-CORS==4.0.0",
    "Flask-JWT-Extended==3.13.1",
    "psycopg2-binary==2.9.9",
    "PyJWT==2.8.0",
    "Werkzeug==1.0.1",
    "python-dotenv==0.10.0",
    "requests==2.20.0",
    "lxml==4.9.3",
    "Pillow==10.0.0",
    "python-magic==0.4.27",
    "PyYAML==6.0.1",
    "Jinja2==2.11.3",
    "MarkupSafe==2.0.1",
]

[dependency-groups]
# Test deps use older package versions (Python 3.7/3.8 legacy).
# For the full test environment use: uv pip install -r requirements-test.txt
test = [
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-flask==1.2.0",
]

[tool.uv]
package = false
